# mac-updater

./: Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: advanced_optimization.sh
src/: config.rs  logger.rs  logging.rs  main.rs  notification.rs  steps.rs  user_input.rs
src/steps/: mod.rs
