[package]
name = "mac-updater"
version = "0.2.0"
edition = "2021"
authors = ["Markus Sommer <markus@letsbenow.de>"]
description = "🧼 A sleek macOS maintenance & update assistant"
license = "MIT"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
console = "0.15"
indicatif = "0.17"
notify-rust = "4.5"
which = "7"
dialoguer = "0.11"
dirs = "6.0"